--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/file_management
 spring.datasource.username=mmsuser
 spring.datasource.password=test1234
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+mybatis.configuration.map-underscore-to-camel-case=true
