--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+server.port=9090
 spring.datasource.url=jdbc:postgresql://localhost:5432/file_management
 spring.datasource.username=mmsuser
 spring.datasource.password=test1234
